--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,13 @@ header{
     margin: 0 auto;
     border: 3px solid black;
     max-width: 1000px;
-    height: 2000px;
+    height: 4000px;
 }
 
 
+.fr{
+    float: right;
+}
 
 .fl {
     float: left;
@@ -134,4 +137,98 @@ li{
 
 .tasto-sn > a{
     color: black;
+}
+
+/* item 1 */
+.item1{
+    width: 100%;
+    height: 500px;
+
+    margin-top: 300px;
+}
+
+.item1-img{
+    width: 70%;
+    height: 100%;
+
+}
+
+.item1-txt{
+     width: 30%;
+     height: 100%;
+     color: rgb(22, 22, 22);
+     font-size: 19px; 
+}
+
+.item1-txt > h1{
+    padding-top: 40px;
+}
+
+.item1-txt > p{
+    padding-top: 60px;
+    font-size: 16px;
+    color: rgb(70, 70, 70);
+}
+
+/* item 2 */
+.item2{
+    width: 100%;
+    height: 500px;
+
+    margin-top: 200px;
+}
+
+.item2-img{
+    width: 70%;
+    height: 100%;
+
+}
+
+.item2-txt{
+     width: 30%;
+     height: 100%;
+     color: rgb(22, 22, 22);
+     font-size: 19px; 
+}
+
+.item2-txt > h1{
+    padding-top: 100px;
+}
+
+.item2-txt > p{
+    padding-top: 30px;
+    font-size: 16px;
+    color: rgb(70, 70, 70);
+}
+
+/* item 3 */
+
+.item3{
+    width: 100%;
+    height: 500px;
+
+    margin-top: 200px;
+}
+
+.item3-img{
+    width: 70%;
+    height: 100%;
+
+}
+
+.item3-txt{
+     width: 30%;
+     height: 100%;
+     color: rgb(22, 22, 22);
+     font-size: 19px; 
+}
+
+.item3-txt > h1{
+    padding-top: 140px;
+}
+
+.item3-txt > p{
+    padding-top: 30px;
+    font-size: 16px;
+    color: rgb(70, 70, 70);
 }
