--- a/css/style.css
+++ b/css/style.css
@@ -232,3 +232,55 @@ li{
     font-size: 16px;
     color: rgb(70, 70, 70);
 }
+
+/* text w big img  */
+
+.big{
+    text-align: center;
+}
+
+.big > h1{
+    margin-top: 200px;
+    color: rgb(22, 22, 22);
+    font-size: 40px; 
+}
+
+.big > p{
+    padding: 25px 50px 0px 50px;
+    color: rgb(70, 70, 70);
+    font-size: 19px;
+}
+
+.big > img{
+    width: 100%;
+    height: 100%;
+}
+
+.stars{
+
+    width: 500px;
+    height: 50px;
+    background-image: url("../img/stars.svg");
+    background-size: cover;
+    background-size: 100%;
+    margin: 0 auto;
+}
+
+.stars > h1{
+    line-height: 100px;
+    font-size: 28px;
+}
+
+.big-download{
+    text-align: center;
+    margin-top: 100px;
+    background-color: dodgerblue;
+    height: 50px;
+    width: 250px;
+    margin: 0 auto;
+    color: white;
+    line-height: 50px;
+    border-radius: 40px;
+    font-size: 20px;
+
+}
